--- a/www/views/index.ejs
+++ b/www/views/index.ejs
@@ -164,8 +164,7 @@
           <img src="img/streamlogo.svg" width="56" height="28"/>
           <h3>Feeds</h3>
           <ul>
-            <!-- <a href="#" class="btn">Step 4 &rarr;</a> -->
-            <a href="#" class="btn" disabled >Coming Very Soon</a>
+            <a href="#" class="btn green">Step 4 &rarr;</a>
             <li>Feeds powered by <a href="//getstream.io" target="_blank">Getstream.io</a></li>
             <li>Stream Overview</li>
             <li>Adding Activities</li>
@@ -176,21 +175,34 @@
         </column>
 
         <column cols="4" class="text-centered">
-          <img src="img/keenlogo.svg" width="35" height="30"/>
-          <h3>Analytics</h3>
+          <img src="img/imgixlogo.svg" width="91" height="34"/>
+          <h3>Image Processing</h3>
           <ul>
-            <!-- <a href="#" class="btn">Step 7 &rarr;</a> -->
-            <a href="#" class="btn" disabled >Coming Very Soon</a>
-            <li>Analytics with <a href="https://keen.io/" target="_blank">Keen</a></li>
-            <li>State vs DOM Manipulation</li>
-            <li>Redux Fundamentals</li>
-            <li>Reducers &amp; Actions</li>
+            <a href="#" class="btn green">Step 5 &rarr;</a>
+            <li>Image hosting by <a href="https://imgix.com" target="_blank">ImgIx.com</a></li>
+            <li>Setup</li>
+            <li>Image Adjustments</li>
+            <li>Instagram-Like Filters</li>
           </ul>
         </column>
-      </row>
 
+    </row>
       <row>
-        <column cols="4" offset="2" class="text-centered">
+
+          <column cols="4" offset="2" class="text-centered">
+            <img src="img/keenlogo.svg" width="35" height="30"/>
+            <h3>Analytics</h3>
+            <ul>
+              <!-- <a href="#" class="btn">Step 7 &rarr;</a> -->
+              <a href="#" class="btn" disabled >Coming Very Soon</a>
+              <li>Analytics with <a href="https://keen.io/" target="_blank">Keen</a></li>
+              <li>State vs DOM Manipulation</li>
+              <li>Redux Fundamentals</li>
+              <li>Reducers &amp; Actions</li>
+            </ul>
+          </column>
+
+        <column cols="4" class="text-centered">
           <img src="img/algolialogo.svg" width="33" height="37"/>
           <h3>Search</h3>
           <ul>
@@ -203,21 +215,6 @@
             <li>Awesome Search Options</li>
           </ul>
         </column>
-
-        <column cols="4" class="text-centered">
-          <img src="img/imgixlogo.svg" width="91" height="34"/>
-          <h3>Image Processing</h3>
-          <ul>
-            <!-- <a href="#" class="btn">Step 6 &rarr;</a> -->
-            <a href="#" class="btn" disabled >Coming Very Soon</a>
-            <li>Image hosting by <a href="https://imgix.com" target="_blank">ImgIx.com</a></li>
-            <li>Setup</li>
-            <li>Image Adjustments</li>
-            <li>Instagram-Like Filters</li>
-          </ul>
-        </column>
-
-
 
       </row>
       <row>
