Updated links on WWW

--- a/www/views/index.ejs
+++ b/www/views/index.ejs
@@ -164,7 +164,7 @@
           <img src="img/streamlogo.svg" width="56" height="28"/>
           <h3>Feeds</h3>
           <ul>
-            <a href="#" class="btn green">Step 4 &rarr;</a>
+            <a href="http://blog.getstream.io/cabin-react-redux-example-app-stream/" class="btn green" target="_blank">Step 4 &rarr;</a>
             <li>Feeds powered by <a href="//getstream.io" target="_blank">Getstream.io</a></li>
             <li>Stream Overview</li>
             <li>Adding Activities</li>
@@ -178,7 +178,7 @@
           <img src="img/imgixlogo.svg" width="91" height="34"/>
           <h3>Image Processing</h3>
           <ul>
-            <a href="#" class="btn green">Step 5 &rarr;</a>
+            <a href="http://blog.getstream.io/cabin-react-redux-example-app-imgix/" class="btn green" target="_blank">Step 5 &rarr;</a>
             <li>Image hosting by <a href="https://imgix.com" target="_blank">ImgIx.com</a></li>
             <li>Setup</li>
             <li>Image Adjustments</li>
