--- a/www/views/index.ejs
+++ b/www/views/index.ejs
@@ -63,7 +63,7 @@
           <h6 class=" animated zoomIn">BROUGHT TO YOU BY <a href="//getstream.io" target="_blank">GETSTREAM.IO</a></h6>
 
           <h1 class="animated zoomIn">Learn React &amp; Redux  With Cabin</h1>
-            <p class="animated zoomIn">These 7 tutorials teach you how to build a feature-rich, scalable social network app using React and Redux. The first 5 tutorials are available today. Enter your email to stay up to date about the upcoming posts:</p>
+            <p class="animated zoomIn">These 7 tutorials teach you how to build a feature-rich, scalable social network app using React and Redux. The first 6 tutorials are available today. Enter your email to stay up to date about the upcoming posts:</p>
 
           <form autocomplete="off" method="#" action="#" class="forms animated zoomIn updates-1">
               <div class="btn-append">
@@ -193,8 +193,7 @@
             <img src="img/keenlogo.svg" width="35" height="30"/>
             <h3>Analytics</h3>
             <ul>
-              <!-- <a href="#" class="btn">Step 7 &rarr;</a> -->
-              <a href="#" class="btn" disabled >Coming Very Soon</a>
+              <a href="http://blog.getstream.io/cabin-react-redux-example-app-keen/" class="btn green" target="_blank">Step 7 &rarr;</a>
               <li>Analytics with <a href="https://keen.io/" target="_blank">Keen</a></li>
               <li>State vs DOM Manipulation</li>
               <li>Redux Fundamentals</li>
