--- a/www/views/demo.ejs
+++ b/www/views/demo.ejs
@@ -87,7 +87,7 @@
                         <a href="http://blog.getstream.io/cabin-react-redux-example-app-keen/" target="_blank"><img src="img/keenlogo.svg" width="16"/>Step Five &rarr;</a>
                     </li>
                     <li>
-                        <a href="#" class="step-disabled"><img src="img/algolialogo.svg" width="16"/>Step Six &rarr;</a>
+                        <a href="http://blog.getstream.io/cabin-react-redux-example-app-algolia/" target="_blank"><img src="img/algolialogo.svg" width="16"/>Step Six &rarr;</a>
                     </li>
                     <li>
                         <a href="#" class="step-disabled"><img src="img/mapboxlogo.svg" width="16"/>Step Seven &rarr;</a>
