--- a/www/views/index.ejs
+++ b/www/views/index.ejs
@@ -205,8 +205,7 @@
           <img src="img/algolialogo.svg" width="33" height="37"/>
           <h3>Search</h3>
           <ul>
-            <!-- <a href="#" class="btn">Step 5 &rarr;</a> -->
-            <a href="#" class="btn" disabled >Coming Very Soon</a>
+            <a href="http://blog.getstream.io/cabin-react-redux-example-app-algolia/" class="btn green" target="_blank">Step 7 &rarr;</a>
             <li>Search powered by <a href="https://algolia.com" target="_blank">Algolia</a></li>
             <li>Overview of Algolia</li>
             <li>Implementing Server Side</li>
