--- a/www/views/demo.ejs
+++ b/www/views/demo.ejs
@@ -90,7 +90,7 @@
                         <a href="http://blog.getstream.io/cabin-react-redux-example-app-algolia/" target="_blank"><img src="img/algolialogo.svg" width="16"/>Step Six &rarr;</a>
                     </li>
                     <li>
-                        <a href="#" class="step-disabled"><img src="img/mapboxlogo.svg" width="16"/>Step Seven &rarr;</a>
+                        <a href="http://blog.getstream.io/cabin-react-redux-example-app-mapbox/" target="_blank"><img src="img/mapboxlogo.svg" width="16"/>Step Seven &rarr;</a>
                     </li>
                     <li>
                         <a href="#" class="step-disabled"><img src="img/digitaloceanlogo.svg" width="16"/>Step Eight &rarr;</a>
