--- a/www/views/index.ejs
+++ b/www/views/index.ejs
@@ -220,8 +220,7 @@
           <img src="img/mapboxlogo.svg" width="86" height="24"/>
           <h3>Maps</h3>
           <ul>
-            <!-- <a href="#" class="btn">Step 8 &rarr;</a> -->
-            <a href="#" class="btn" disabled >Coming Very Soon</a>
+            <a href="http://blog.getstream.io/cabin-react-redux-example-app-mapbox/" class="btn green" target="_blank">Step 8 &rarr;</a>
             <li>Custom maps with <a href="https://mapbox.com" target="_blank">Mapbox.com</a></li>
             <li>Client &amp; Server Side Setups</li>
             <li>Integration Tips</li>
