--- a/www/views/index.ejs
+++ b/www/views/index.ejs
@@ -249,7 +249,7 @@
       <row centered>
 
      <column cols="12" class="text-centered">
-        <span class="text-centered bonus-title">Unit Testing &amp; Documentation</span>
+        <span class="text-centered bonus-title">React/Redux - Best Practices &amp; Gotchas</span>
         </column>
 
       </row>
@@ -258,7 +258,11 @@
         <ul>
           <!-- <a href="#" class="btn" disabled >Go To Bonus &rarr;</a> -->
           <a href="#" class="btn" disabled >Coming Very Soon</a>
-          <li>Full-Stack Node &amp; React Application Structure</li>
+          <li>Clearly articulate best practices when it comes to <a href="https://facebook.github.io/react/" target="_blank">React</a> &amp; <a href="http://redux.js.org/index.html" target="_blank">Redux</a></li>
+          <li>Avoid common React/Redux pitfalls</li>
+          <li>Structure a production level application that can scale</li>
+          <li>Utilize tools such as <a href="https://facebook.github.io/immutable-js/" target="_blank">Immutable.js</a>, <a href="https://chrome.google.com/webstore/detail/react-developer-tools/fmkadmapgofadopljbjfkapdkoienihi?hl=en" target="_blank">Chrome's React developer tools</a>, and middleware, such as <a href="https://github.com/getsentry/raven-js" target="_blank">Raven</a></li>
+          <li>Understand the React event system</li>
           <li><a href="http://webpack.github.io/" target="_blank">Webpack</a> Overview &amp; Basics</li>
 
         </ul>
