--- a/www/views/index.ejs
+++ b/www/views/index.ejs
@@ -263,7 +263,7 @@
           <li>Structure a production level application that can scale</li>
           <li>Utilize tools such as <a href="https://facebook.github.io/immutable-js/" target="_blank">Immutable.js</a>, <a href="https://chrome.google.com/webstore/detail/react-developer-tools/fmkadmapgofadopljbjfkapdkoienihi?hl=en" target="_blank">Chrome's React developer tools</a>, and middleware, such as <a href="https://github.com/getsentry/raven-js" target="_blank">Raven</a></li>
           <li>Understand the React event system</li>
-          <li><a href="http://webpack.github.io/" target="_blank">Webpack</a> Overview &amp; Basics</li>
+          <li><a href="http://webpack.github.io/" target="_blank">Webpack</a> overview &amp; basics</li>
 
         </ul>
       </row>
