--- a/www/views/demo.ejs
+++ b/www/views/demo.ejs
@@ -96,7 +96,7 @@
                         <a href="#" class="step-disabled"><img src="img/digitaloceanlogo.svg" width="16"/>Step Eight &rarr;</a>
                     </li>
                     <li>
-                        <a href="#" class="step-disabled">Bonus &rarr;</a>
+                        <a href="http://blog.getstream.io/react-redux-best-practices-gotchas/" target="_blank">Bonus &rarr;</a>
                     </li>
                 </ul>
             </nav>
