--- a/www/views/index.ejs
+++ b/www/views/index.ejs
@@ -256,8 +256,7 @@
 
       <row centered>
         <ul>
-          <!-- <a href="#" class="btn" disabled >Go To Bonus &rarr;</a> -->
-          <a href="#" class="btn" disabled >Coming Very Soon</a>
+          <a href="http://blog.getstream.io/react-redux-best-practices-gotchas/" class="btn green" target="_blank">Go To Bonus &rarr;</a>
           <li>Clearly articulate best practices when it comes to <a href="https://facebook.github.io/react/" target="_blank">React</a> &amp; <a href="http://redux.js.org/index.html" target="_blank">Redux</a></li>
           <li>Avoid common React/Redux pitfalls</li>
           <li>Structure a production level application that can scale</li>
