--- a/www/views/demo.ejs
+++ b/www/views/demo.ejs
@@ -6,6 +6,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    <meta name="description" content="This example application created by getstream.io teaches you how to to build an Instagram style application with activity streams and newsfeeds.">
+    <meta name="keywords" content="redux javascript, redux example app, redux http request, keen.io, algolia search, react js ui, javascript, nodejs, redux with react router, react js pagination, reactjs mobile, react js rest api">
+
     <meta property="og:title" content="Cabin - A React/Redux Tutorial Series by GetStream.io">
     <meta property="og:site_name" content="Cabin - A React/Redux Tutorial Series by GetStream.io">
     <meta property="og:url" content="http://cabin.getstream.io">
@@ -34,7 +37,7 @@
 </head>
 <body class="demo">
   <div class="github">
-    <a class="github-button" href="https://github.com/getstream/stream-react-example" data-style="mega" data-count-href="/getstream/stream-react-example/stargazers" data-count-api="/repos/getstream/stream-react-example#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star getstream/stream-react-example on GitHub">Star</a>
+    <a class="github-button" href="https://github.com/getstream/stream-react-example" data-style="mega" data-count-href="/getstream/stream-react-example/stargazers" data-count-api="/repos/getstream/stream-react-example#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star getstream/stream-react-example on GitHub" title="GitHub">Star</a>
   </div>
 	<div class="wrapper">
             <input type="checkbox" id="navigation" />
@@ -64,39 +67,40 @@
 
                 <ul>
                     <li class="logo-nav text-centered">
-                        <a href="/"><img src="img/Logo.svg" alt="Cabin Logo"></a>
+                        <a href="/" title="Cabin">
+                            <img src="img/Logo.svg" alt="Cabin Logo">
+                        </a>
                     </li>
                     <li>
-                        <a href="https://github.com/GetStream/stream-react-example" class="btn nav-btn" outline target="_blank">GITHUB</a>
-                        <a href="https://getstream.io" class="btn nav-btn" primary target="_blank">Get Stream</a>
-                    </li>
-
-                    <li>
-                        <a href="http://blog.getstream.io/cabin-react-redux-example-app-react" target="_blank"><img src="img/reactlogo.svg" width="18" /> Step One &rarr;</a>
+                        <a href="https://github.com/GetStream/stream-react-example" class="btn nav-btn" outline target="_blank" title="GitHub">GITHUB</a>
+                        <a href="https://getstream.io" class="btn nav-btn" primary target="_blank" title="GetStream.io">Get Stream</a>
                     </li>
                     <li>
-                        <a href="http://blog.getstream.io/cabin-react-redux-example-app-redux" target="_blank"><img src="img/reduxlogo.svg" width="18" />Step Two &rarr;</a>
+                        <a href="http://blog.getstream.io/cabin-react-redux-example-app-react" target="_blank" title="Cabin - React"><img src="img/reactlogo.svg" width="18" alt="React" /> Step One &rarr;</a>
                     </li>
                     <li>
-                        <a href="http://blog.getstream.io/cabin-react-redux-example-app-stream/" target="_blank"><img src="img/streamlogo.svg" width="18" />Step Three &rarr;</a>
+                        <a href="http://blog.getstream.io/cabin-react-redux-example-app-redux" target="_blank" title="Cabin - Redux"><img src="img/reduxlogo.svg" width="18" alt="Redux" />Step Two &rarr;</a>
                     </li>
                     <li>
-                        <a href="http://blog.getstream.io/cabin-react-redux-example-app-imgix/" target="_blank"><img src="img/imgix_small_logo.svg" width="16"/>Step Four &rarr;</a>
+                        <a href="http://blog.getstream.io/cabin-react-redux-example-app-stream/" target="_blank" title="Cabin - Stream"><img src="img/streamlogo.svg" width="18" alt="GetStream.io" />Step Three &rarr;</a>
                     </li>
                     <li>
-                        <a href="http://blog.getstream.io/cabin-react-redux-example-app-keen/" target="_blank"><img src="img/keenlogo.svg" width="16"/>Step Five &rarr;</a>
+                        <a href="http://blog.getstream.io/cabin-react-redux-example-app-imgix/" target="_blank" title="Cabin - Imgix"><img src="img/imgix_small_logo.svg" width="16" alt="Imgix" />Step Four &rarr;</a>
                     </li>
                     <li>
-                        <a href="http://blog.getstream.io/cabin-react-redux-example-app-algolia/" target="_blank"><img src="img/algolialogo.svg" width="16"/>Step Six &rarr;</a>
+                        <a href="http://blog.getstream.io/cabin-react-redux-example-app-keen/" target="_blank" title="Cabin - Keen.io"><img src="img/keenlogo.svg" width="16" alt="Keen.io" />Step Five &rarr;</a>
                     </li>
                     <li>
-                        <a href="http://blog.getstream.io/cabin-react-redux-example-app-mapbox/" target="_blank"><img src="img/mapboxlogo.svg" width="16"/>Step Seven &rarr;</a>
+                        <a href="http://blog.getstream.io/cabin-react-redux-example-app-algolia/" target="_blank" title="Cabin - Algolia"><img src="img/algolialogo.svg" width="16" alt='Algolia' />Step Six &rarr;</a>
                     </li>
                     <li>
-                        <a href="#" class="step-disabled"><img src="img/digitaloceanlogo.svg" width="16"/>Step Eight &rarr;</a>
+                        <a href="http://blog.getstream.io/cabin-react-redux-example-app-mapbox/" target="_blank" title="Cabin - Mapbox"><img src="img/mapboxlogo.svg" width="16" alt="Mapbox" />Step Seven &rarr;</a>
                     </li>
                     <li>
-                        <a href="http://blog.getstream.io/react-redux-best-practices-gotchas/" target="_blank">Bonus &rarr;</a>
+                        <a href="#" class="step-disabled" title="DigitalOcean"><img src="img/digitaloceanlogo.svg" width="16" alt="DigitalOcean" />Step Eight &rarr;</a>
+                    </li>
+                    <li>
+                        <a href="http://blog.getstream.io/react-redux-best-practices-gotchas/" target="_blank" title="React/Redux Best Practices">Bonus &rarr;</a>
                     </li>
                 </ul>
             </nav>
@@ -106,10 +110,7 @@
                 <column cols="4">
                   <div class="project-info aligner">
                     <div>
-
-
-                    <h6 class=" animated zoomIn">BROUGHT TO YOU BY <a href="//getstream.io">GETSTREAM.IO</a></h6>
-
+                    <h6 class=" animated zoomIn">BROUGHT TO YOU BY <a href="//getstream.io" target="_blank" title="GetStream.io">GETSTREAM.IO</a></h6>
                     <h1 class="animated zoomIn">Learn React &amp; Redux  With Cabin</h1>
                       <p class="animated zoomIn">This demo is the end result of our tutorial series that teaches you how to structure a full stack Javascript Application that is made powerful and scalable through services like Stream, Algolia, Mapbox, Keen and Imgix.</p>
                       </div>
@@ -127,18 +128,18 @@
             </row>
             <row class="meta">
                 <column class="text-centered">
-                    &copy; 2016 <a href="https://getstream.io" target="_blank">Stream.io</a> INC    |    A Techstars NYC Company    |    Proudly Built in Boulder and Amsterdam
+                    &copy; 2016 <a href="https://getstream.io" target="_blank" title="GetStream.io">Stream.io</a> INC    |    A Techstars NYC Company    |    Proudly Built in Boulder and Amsterdam
                 </column>
                 <column cols="2" offset="2">
                   <div class="social right">
-                    <a href="https://twitter.com/getstream_io" target="_blank">
-                      <img src="img/twitter.svg"/>
+                    <a href="https://twitter.com/getstream_io" target="_blank" title="Twitter">
+                      <img src="img/twitter.svg" alt="Twitter" />
                     </a>
-                    <a href="https://github.com/GetStream" target="_blank">
-                      <img src="img/github.svg"/>
+                    <a href="https://github.com/GetStream" target="_blank" title="GitHub">
+                      <img src="img/github.svg" alt="GitHub" />
                     </a>
-                    <a class="last" href="https://plus.google.com/107168613155747146780" target="_blank">
-                      <img src="img/gplus.svg"/>
+                    <a class="last" href="https://plus.google.com/107168613155747146780" target="_blank" title="Google Plus">
+                      <img src="img/gplus.svg" alt="Google Plus" />
                     </a>
                   </div>
 
