--- a/www/views/index.ejs
+++ b/www/views/index.ejs
@@ -6,6 +6,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    <meta name="description" content="This example application created by getstream.io teaches you how to to build an Instagram style application with activity streams and newsfeeds.">
+    <meta name="keywords" content="react js course, react and redux, react router, redux reducer, react upload, react javascript, redux javascript, react tutorial, redux architecture, react stream, react webpack, redux infinite scroll">
+
     <meta property="og:title" content="Cabin - A React/Redux Tutorial Series by GetStream.io">
     <meta property="og:site_name" content="Cabin - A React/Redux Tutorial Series by GetStream.io">
     <meta property="og:url" content="http://cabin.getstream.io">
@@ -47,7 +50,7 @@
 
           <column cols="10">
             <div class="right">
-              <a href="/demo" class="btn" small outline>DEMO</a>
+              <a href="/demo" class="btn" small outline title="Demo">DEMO</a>
               <!-- <a href="https://github.com/GetStream/stream-react-example" class="btn" outline target="_blank">GITHUB</a> -->
               <!-- Place this tag where you want the button to render. -->
 
@@ -58,9 +61,9 @@
 
       <row class="content">
         <column cols="7">
-          <img src="img/hero-react-redux.svg" width="194" height="71" class=" animated zoomIn"/>
+          <img src="img/hero-react-redux.svg" width="194" height="71" class=" animated zoomIn" alt="React and Redux"/>
 
-          <h6 class=" animated zoomIn">BROUGHT TO YOU BY <a href="//getstream.io" target="_blank">GETSTREAM.IO</a></h6>
+          <h6 class=" animated zoomIn">BROUGHT TO YOU BY <a href="//getstream.io" target="_blank" title="GetStream.io">GETSTREAM.IO</a></h6>
 
           <h1 class="animated zoomIn">Learn React &amp; Redux  With Cabin</h1>
             <p class="animated zoomIn">These 7 tutorials teach you how to build a feature-rich, scalable social network app using React and Redux. The first 6 tutorials are available today. Enter your email to stay up to date about the upcoming posts:</p>
@@ -75,7 +78,7 @@
               </div>
           </form>
           <span class="subscribe white">Stay updated about new tutorials &nearr; </span>
-          <a href="#partner" class="hero-jump">&nbsp;</a>
+          <a href="#partner" class="hero-jump" title="Partners">&nbsp;</a>
 
         </column>
         <column cols="4">
@@ -110,7 +113,7 @@
       </row>
       <row centered>
         <ul>
-          <a href="http://blog.getstream.io/cabin-react-redux-example-app-introduction" class="btn green" target="_blank">Step 1 &rarr;</a>
+          <a href="http://blog.getstream.io/cabin-react-redux-example-app-introduction" class="btn green" target="_blank" title="Cabin Tutorial - Step 1">Step 1 &rarr;</a>
           <li>Full-Stack Node &amp; React Application Structure</li>
           <li>Webpack Overview &amp; Basics</li>
         </ul>
@@ -128,10 +131,10 @@
 
       <row>
         <column cols="4" offset="2" class="text-centered">
-          <img src="img/reactlogo.svg" width="40" height="36"/>
+          <img src="img/reactlogo.svg" width="40" height="36" alt="React logo" />
           <h3>React</h3>
           <ul>
-            <a href="http://blog.getstream.io/cabin-react-redux-example-app-react" class="btn green" target="_blank">Step 2 &rarr;</a>
+            <a href="http://blog.getstream.io/cabin-react-redux-example-app-react" class="btn green" target="_blank" title="Cabin Tutorial - Step 2">Step 2 &rarr;</a>
             <li>History &amp; Philosophy of <a href="https://facebook.github.io/react/" target="_blank">React</a></li>
             <li>JSX Overview &amp; Basics</li>
             <li>React Components, In-Depth</li>
@@ -139,10 +142,10 @@
         </column>
 
         <column cols="4" class="text-centered">
-          <img src="img/reduxlogo.svg" width="37" height="35"/>
+          <img src="img/reduxlogo.svg" width="37" height="35" alt="Redux logo" />
           <h3>Redux</h3>
           <ul>
-            <a href="http://blog.getstream.io/cabin-react-redux-example-app-redux" class="btn green" target="_blank">Step 3 &rarr;</a>
+            <a href="http://blog.getstream.io/cabin-react-redux-example-app-redux" class="btn green" target="_blank" title="Cabin Tutorial - Step 3">Step 3 &rarr;</a>
             <li><a href="http://redux.js.org/" target="_blank">Redux</a> Overview</li>
             <li>State vs DOM Manipulation</li>
             <li>Redux Fundamentals</li>
@@ -161,10 +164,10 @@
 
       <row>
         <column cols="4" offset="2" class="text-centered">
-          <img src="img/streamlogo.svg" width="56" height="28"/>
+          <img src="img/streamlogo.svg" width="56" height="28" alt="Stream logo" />
           <h3>Feeds</h3>
           <ul>
-            <a href="http://blog.getstream.io/cabin-react-redux-example-app-stream/" class="btn green" target="_blank">Step 4 &rarr;</a>
+            <a href="http://blog.getstream.io/cabin-react-redux-example-app-stream/" class="btn green" target="_blank" title="Cabin Tutorial - Step 4">Step 4 &rarr;</a>
             <li>Feeds powered by <a href="//getstream.io" target="_blank">Getstream.io</a></li>
             <li>Stream Overview</li>
             <li>Adding Activities</li>
@@ -175,10 +178,10 @@
         </column>
 
         <column cols="4" class="text-centered">
-          <img src="img/imgixlogo.svg" width="91" height="34"/>
+          <img src="img/imgixlogo.svg" width="91" height="34" alt="Imgix logo" />
           <h3>Image Processing</h3>
           <ul>
-            <a href="http://blog.getstream.io/cabin-react-redux-example-app-imgix/" class="btn green" target="_blank">Step 5 &rarr;</a>
+            <a href="http://blog.getstream.io/cabin-react-redux-example-app-imgix/" class="btn green" target="_blank" title="Cabin Tutorial - Step 5">Step 5 &rarr;</a>
             <li>Image hosting by <a href="https://imgix.com" target="_blank">ImgIx.com</a></li>
             <li>Setup</li>
             <li>Image Adjustments</li>
@@ -190,10 +193,10 @@
       <row>
 
           <column cols="4" offset="2" class="text-centered">
-            <img src="img/keenlogo.svg" width="35" height="30"/>
+            <img src="img/keenlogo.svg" width="35" height="30" alt="Keen logo" />
             <h3>Analytics</h3>
             <ul>
-              <a href="http://blog.getstream.io/cabin-react-redux-example-app-keen/" class="btn green" target="_blank">Step 6 &rarr;</a>
+              <a href="http://blog.getstream.io/cabin-react-redux-example-app-keen/" class="btn green" target="_blank" title="Cabin Tutorial - Step 6">Step 6 &rarr;</a>
               <li>Analytics with <a href="https://keen.io/" target="_blank">Keen</a></li>
               <li>State vs DOM Manipulation</li>
               <li>Redux Fundamentals</li>
@@ -202,10 +205,10 @@
           </column>
 
         <column cols="4" class="text-centered">
-          <img src="img/algolialogo.svg" width="33" height="37"/>
+          <img src="img/algolialogo.svg" width="33" height="37" alt="Algolia logo" />
           <h3>Search</h3>
           <ul>
-            <a href="http://blog.getstream.io/cabin-react-redux-example-app-algolia/" class="btn green" target="_blank">Step 7 &rarr;</a>
+            <a href="http://blog.getstream.io/cabin-react-redux-example-app-algolia/" class="btn green" target="_blank" title="Cabin Tutorial - Step 7">Step 7 &rarr;</a>
             <li>Search powered by <a href="https://algolia.com" target="_blank">Algolia</a></li>
             <li>Overview of Algolia</li>
             <li>Implementing Server Side</li>
@@ -217,7 +220,7 @@
       </row>
       <row>
         <column cols="4" offset="2" class="text-centered">
-          <img src="img/mapboxlogo.svg" width="86" height="24"/>
+          <img src="img/mapboxlogo.svg" width="86" height="24" alt="Mapbox logo" />
           <h3>Maps</h3>
           <ul>
             <a href="http://blog.getstream.io/cabin-react-redux-example-app-mapbox/" class="btn green" target="_blank">Step 8 &rarr;</a>
@@ -228,22 +231,22 @@
           </ul>
         </column>
         <column cols="4" class="text-centered">
-          <img src="img/digitaloceanlogo.svg" width="54" height="30"/>
+          <img src="img/digitaloceanlogo.svg" width="54" height="30" alt="DigitalOcean logo" />
           <h3>Cloud Server</h3>
           <ul>
             <!-- <a href="#" class="btn">Step 9 &rarr;</a> -->
             <a href="#" class="btn" disabled >Coming Very Soon</a>
-            <li>Hosting through <a href="https://www.digitalocean.com/" target="_blank">Digital Ocean</a></li>
+            <li>Hosting through <a href="https://www.digitalocean.com/" target="_blank" title="DigitalOcean">DigitalOcean</a></li>
             <li>Automating Deployments</li>
-            <li>Process Management with <a href="http://pm2.keymetrics.io/" target="_blank">pm2</a></li>
-            <li><a href="https://www.nginx.com/" target="_blank">NGINX</a> Configuration</li>
+            <li>Process Management with <a href="http://pm2.keymetrics.io/" target="_blank" title="PM2">pm2</a></li>
+            <li><a href="https://www.nginx.com/" target="_blank" title="NGINX">NGINX</a> Configuration</li>
           </ul>
         </column>
       </row>
 
       <row centered>
         <column cols="12" class="text-centered">
-          <img src="img/bonus.svg" width="129" height="98" class="bonus-img"/>
+          <img src="img/bonus.svg" width="129" height="98" class="bonus-img" alt="Stream Bonus logo"/>
         </column>
       </row>
       <row centered>
@@ -262,7 +265,7 @@
           <li>Structure a production level application that can scale</li>
           <li>Utilize tools such as <a href="https://facebook.github.io/immutable-js/" target="_blank">Immutable.js</a>, <a href="https://chrome.google.com/webstore/detail/react-developer-tools/fmkadmapgofadopljbjfkapdkoienihi?hl=en" target="_blank">Chrome's React developer tools</a>, and middleware, such as <a href="https://github.com/getsentry/raven-js" target="_blank">Raven</a></li>
           <li>Understand the React event system</li>
-          <li><a href="http://webpack.github.io/" target="_blank">Webpack</a> overview &amp; basics</li>
+          <li><a href="http://webpack.github.io/" target="_blank" title="Webpack">Webpack</a> overview &amp; basics</li>
 
         </ul>
       </row>
@@ -270,12 +273,12 @@
     </section>
 
     <section class="end">
-        <img src="img/end-bg.png" />
+        <img src="img/end-bg.png" alt="Background image" />
       <row centered>
-        <a href="https://github.com/GetStream/stream-react-example" class="btn primary">GITHUB</a>
+        <a href="https://github.com/GetStream/stream-react-example" class="btn primary" title="GitHub">GITHUB</a>
       </row>
       <row centered>
-        <a href="/demo" class="demo">DEMO</a>
+        <a href="/demo" class="demo" title="Demo">DEMO</a>
       </row>
 
     </section>
@@ -303,14 +306,14 @@
         </column>
         <column cols="2" offset="2">
           <div class="social right">
-            <a href="https://twitter.com/getstream_io" target="_blank">
-              <img src="img/twitter.svg"/>
+            <a href="https://twitter.com/getstream_io" target="_blank" title="Twitter">
+              <img src="img/twitter.svg" alt="Twitter"/>
             </a>
-            <a href="https://github.com/GetStream" target="_blank">
-              <img src="img/github.svg"/>
+            <a href="https://github.com/GetStream" target="_blank" title="GitHub">
+              <img src="img/github.svg" alt="GitHub" />
             </a>
-            <a class="last" href="https://plus.google.com/107168613155747146780" target="_blank">
-              <img src="img/gplus.svg"/>
+            <a class="last" href="https://plus.google.com/107168613155747146780" target="_blank" title="Google Plus">
+              <img src="img/gplus.svg" alt="Google Plus" />
             </a>
           </div>
 
