--- a/www/views/index.ejs
+++ b/www/views/index.ejs
@@ -234,12 +234,11 @@
           <img src="img/digitaloceanlogo.svg" width="54" height="30" alt="DigitalOcean logo" />
           <h3>Cloud Server</h3>
           <ul>
-            <!-- <a href="#" class="btn">Step 9 &rarr;</a> -->
-            <a href="#" class="btn" disabled >Coming Very Soon</a>
+            <a href="https://www.digitalocean.com/community/tutorials/how-to-deploy-a-node-js-app-using-terraform-on-ubuntu-14-04" class="btn green">Step 9 &rarr;</a>
             <li>Hosting through <a href="https://www.digitalocean.com/" target="_blank" title="DigitalOcean">DigitalOcean</a></li>
             <li>Automating Deployments</li>
             <li>Process Management with <a href="http://pm2.keymetrics.io/" target="_blank" title="PM2">pm2</a></li>
-            <li><a href="https://www.nginx.com/" target="_blank" title="NGINX">NGINX</a> Configuration</li>
+            <li><a href="https://www.terraform.io/" target="_blank" title="Terraform">Terraform</a> Configuration</li>
           </ul>
         </column>
       </row>
