--- a/www/views/demo.ejs
+++ b/www/views/demo.ejs
@@ -97,7 +97,7 @@
                         <a href="http://blog.getstream.io/cabin-react-redux-example-app-mapbox/" target="_blank" title="Cabin - Mapbox"><img src="img/mapboxlogo.svg" width="16" alt="Mapbox" />Step Seven &rarr;</a>
                     </li>
                     <li>
-                        <a href="#" class="step-disabled" title="DigitalOcean"><img src="img/digitaloceanlogo.svg" width="16" alt="DigitalOcean" />Step Eight &rarr;</a>
+                        <a href="https://www.digitalocean.com/community/tutorials/how-to-deploy-a-node-js-app-using-terraform-on-ubuntu-14-04" title="DigitalOcean"><img src="img/digitaloceanlogo.svg" width="16" alt="DigitalOcean" />Step Eight &rarr;</a>
                     </li>
                     <li>
                         <a href="http://blog.getstream.io/react-redux-best-practices-gotchas/" target="_blank" title="React/Redux Best Practices">Bonus &rarr;</a>
