--- a/www/views/index.ejs
+++ b/www/views/index.ejs
@@ -234,7 +234,7 @@
           <img src="img/digitaloceanlogo.svg" width="54" height="30" alt="DigitalOcean logo" />
           <h3>Cloud Server</h3>
           <ul>
-            <a href="https://www.digitalocean.com/community/tutorials/how-to-deploy-a-node-js-app-using-terraform-on-ubuntu-14-04" class="btn green">Step 9 &rarr;</a>
+            <a href="https://www.digitalocean.com/community/tutorials/how-to-deploy-a-node-js-app-using-terraform-on-ubuntu-14-04" class="btn green" target="_blank">Step 9 &rarr;</a>
             <li>Hosting through <a href="https://www.digitalocean.com/" target="_blank" title="DigitalOcean">DigitalOcean</a></li>
             <li>Automating Deployments</li>
             <li>Process Management with <a href="http://pm2.keymetrics.io/" target="_blank" title="PM2">pm2</a></li>
