--- a/www/views/demo.ejs
+++ b/www/views/demo.ejs
@@ -41,7 +41,7 @@
   </div>
 	<div class="wrapper">
             <input type="checkbox" id="navigation" />
-            <label for="navigation">
+            <label htmlFor="navigation">
                 <svg width="66px" height="66px" viewBox="17 13 66 66" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                     <!-- Generator: Sketch 3.8.2 (29753) - http://www.bohemiancoding.com/sketch -->
                     <desc>Created with Sketch.</desc>
