--- a/www/views/index.ejs
+++ b/www/views/index.ejs
@@ -15,7 +15,7 @@
     <meta property="og:description" content="This example application created by getstream.io teaches you how to to build an Instagram style application with activity streams and newsfeeds.">
     <meta property="fb:app_id" content="1714548178824131">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="http://cabin.getstream.io/img/og_cabin.png" />
+    <meta property="og:image" content="http://cabin.getstream.io/img/og_cabin.jpg" />
 
     <link rel="stylesheet" href="css/core.css" />
     <link rel="stylesheet" href="css/animate.css" />
@@ -272,7 +272,7 @@
     </section>
 
     <section class="end">
-        <img src="img/end-bg.png" alt="Background image" />
+        <img src="img/end-bg.jpg" alt="Background image" />
       <row centered>
         <a href="https://github.com/GetStream/stream-react-example" class="btn primary" title="GitHub">GITHUB</a>
       </row>
