Switched blog URL from blog.getstream.io to new getstream.io/blog/

--- a/www/views/index.ejs
+++ b/www/views/index.ejs
@@ -113,7 +113,7 @@
       </row>
       <row centered>
         <ul>
-          <a href="http://blog.getstream.io/cabin-react-redux-example-app-introduction" class="btn green" target="_blank" title="Cabin Tutorial - Step 1">Step 1 &rarr;</a>
+          <a href="https://getstream.io/blog/cabin-react-redux-example-app-introduction/" class="btn green" target="_blank" title="Cabin Tutorial - Step 1">Step 1 &rarr;</a>
           <li>Full-Stack Node &amp; React Application Structure</li>
           <li>Webpack Overview &amp; Basics</li>
         </ul>
@@ -134,7 +134,7 @@
           <img src="img/reactlogo.svg" width="40" height="36" alt="React logo" />
           <h3>React</h3>
           <ul>
-            <a href="http://blog.getstream.io/cabin-react-redux-example-app-react" class="btn green" target="_blank" title="Cabin Tutorial - Step 2">Step 2 &rarr;</a>
+            <a href="https://getstream.io/blog/cabin-react-redux-example-app-react/" class="btn green" target="_blank" title="Cabin Tutorial - Step 2">Step 2 &rarr;</a>
             <li>History &amp; Philosophy of <a href="https://facebook.github.io/react/" target="_blank">React</a></li>
             <li>JSX Overview &amp; Basics</li>
             <li>React Components, In-Depth</li>
@@ -145,7 +145,7 @@
           <img src="img/reduxlogo.svg" width="37" height="35" alt="Redux logo" />
           <h3>Redux</h3>
           <ul>
-            <a href="http://blog.getstream.io/cabin-react-redux-example-app-redux" class="btn green" target="_blank" title="Cabin Tutorial - Step 3">Step 3 &rarr;</a>
+            <a href="https://getstream.io/blog/cabin-react-redux-example-app-redux/" class="btn green" target="_blank" title="Cabin Tutorial - Step 3">Step 3 &rarr;</a>
             <li><a href="http://redux.js.org/" target="_blank">Redux</a> Overview</li>
             <li>State vs DOM Manipulation</li>
             <li>Redux Fundamentals</li>
@@ -167,7 +167,7 @@
           <img src="img/streamlogo.svg" width="56" height="28" alt="Stream logo" />
           <h3>Feeds</h3>
           <ul>
-            <a href="http://blog.getstream.io/cabin-react-redux-example-app-stream/" class="btn green" target="_blank" title="Cabin Tutorial - Step 4">Step 4 &rarr;</a>
+            <a href="https://getstream.io/blog/cabin-react-redux-example-app-stream/" class="btn green" target="_blank" title="Cabin Tutorial - Step 4">Step 4 &rarr;</a>
             <li>Feeds powered by <a href="//getstream.io" target="_blank">Getstream.io</a></li>
             <li>Stream Overview</li>
             <li>Adding Activities</li>
@@ -181,7 +181,7 @@
           <img src="img/imgixlogo.svg" width="91" height="34" alt="Imgix logo" />
           <h3>Image Processing</h3>
           <ul>
-            <a href="http://blog.getstream.io/cabin-react-redux-example-app-imgix/" class="btn green" target="_blank" title="Cabin Tutorial - Step 5">Step 5 &rarr;</a>
+            <a href="https://getstream.io/blog/cabin-react-redux-example-app-imgix/" class="btn green" target="_blank" title="Cabin Tutorial - Step 5">Step 5 &rarr;</a>
             <li>Image hosting by <a href="https://imgix.com" target="_blank">ImgIx.com</a></li>
             <li>Setup</li>
             <li>Image Adjustments</li>
@@ -196,7 +196,7 @@
             <img src="img/keenlogo.svg" width="35" height="30" alt="Keen logo" />
             <h3>Analytics</h3>
             <ul>
-              <a href="http://blog.getstream.io/cabin-react-redux-example-app-keen/" class="btn green" target="_blank" title="Cabin Tutorial - Step 6">Step 6 &rarr;</a>
+              <a href="https://getstream.io/blog/cabin-react-redux-example-app-keen/" class="btn green" target="_blank" title="Cabin Tutorial - Step 6">Step 6 &rarr;</a>
               <li>Analytics with <a href="https://keen.io/" target="_blank">Keen</a></li>
               <li>State vs DOM Manipulation</li>
               <li>Redux Fundamentals</li>
@@ -208,7 +208,7 @@
           <img src="img/algolialogo.svg" width="33" height="37" alt="Algolia logo" />
           <h3>Search</h3>
           <ul>
-            <a href="http://blog.getstream.io/cabin-react-redux-example-app-algolia/" class="btn green" target="_blank" title="Cabin Tutorial - Step 7">Step 7 &rarr;</a>
+            <a href="https://getstream.io/blog/cabin-react-redux-example-app-algolia/" class="btn green" target="_blank" title="Cabin Tutorial - Step 7">Step 7 &rarr;</a>
             <li>Search powered by <a href="https://algolia.com" target="_blank">Algolia</a></li>
             <li>Overview of Algolia</li>
             <li>Implementing Server Side</li>
@@ -223,7 +223,7 @@
           <img src="img/mapboxlogo.svg" width="86" height="24" alt="Mapbox logo" />
           <h3>Maps</h3>
           <ul>
-            <a href="http://blog.getstream.io/cabin-react-redux-example-app-mapbox/" class="btn green" target="_blank">Step 8 &rarr;</a>
+            <a href="https://getstream.io/blog/cabin-react-redux-example-app-mapbox/" class="btn green" target="_blank">Step 8 &rarr;</a>
             <li>Custom maps with <a href="https://mapbox.com" target="_blank">Mapbox.com</a></li>
             <li>Client &amp; Server Side Setups</li>
             <li>Integration Tips</li>
@@ -258,7 +258,7 @@
 
       <row centered>
         <ul>
-          <a href="http://blog.getstream.io/react-redux-best-practices-gotchas/" class="btn green" target="_blank">Go To Bonus &rarr;</a>
+          <a href="https://getstream.io/blog/react-redux-best-practices-gotchas/" class="btn green" target="_blank">Go To Bonus &rarr;</a>
           <li>Clearly articulate best practices when it comes to <a href="https://facebook.github.io/react/" target="_blank">React</a> &amp; <a href="http://redux.js.org/index.html" target="_blank">Redux</a></li>
           <li>Avoid common React/Redux pitfalls</li>
           <li>Structure a production level application that can scale</li>
