--- a/www/views/demo.ejs
+++ b/www/views/demo.ejs
@@ -76,31 +76,31 @@
                         <a href="https://getstream.io" class="btn nav-btn" primary target="_blank" title="GetStream.io">Get Stream</a>
                     </li>
                     <li>
-                        <a href="http://blog.getstream.io/cabin-react-redux-example-app-react" target="_blank" title="Cabin - React"><img src="img/reactlogo.svg" width="18" alt="React" /> Step One &rarr;</a>
+                        <a href="https://getstream.io/blog/cabin-react-redux-example-app-react/" target="_blank" title="Cabin - React"><img src="img/reactlogo.svg" width="18" alt="React" /> Step One &rarr;</a>
                     </li>
                     <li>
-                        <a href="http://blog.getstream.io/cabin-react-redux-example-app-redux" target="_blank" title="Cabin - Redux"><img src="img/reduxlogo.svg" width="18" alt="Redux" />Step Two &rarr;</a>
+                        <a href="https://getstream.io/blog/cabin-react-redux-example-app-redux/" target="_blank" title="Cabin - Redux"><img src="img/reduxlogo.svg" width="18" alt="Redux" />Step Two &rarr;</a>
                     </li>
                     <li>
-                        <a href="http://blog.getstream.io/cabin-react-redux-example-app-stream/" target="_blank" title="Cabin - Stream"><img src="img/streamlogo.svg" width="18" alt="GetStream.io" />Step Three &rarr;</a>
+                        <a href="https://getstream.io/blog/cabin-react-redux-example-app-stream/" target="_blank" title="Cabin - Stream"><img src="img/streamlogo.svg" width="18" alt="GetStream.io" />Step Three &rarr;</a>
                     </li>
                     <li>
-                        <a href="http://blog.getstream.io/cabin-react-redux-example-app-imgix/" target="_blank" title="Cabin - Imgix"><img src="img/imgix_small_logo.svg" width="16" alt="Imgix" />Step Four &rarr;</a>
+                        <a href="https://getstream.io/blog/cabin-react-redux-example-app-imgix/" target="_blank" title="Cabin - Imgix"><img src="img/imgix_small_logo.svg" width="16" alt="Imgix" />Step Four &rarr;</a>
                     </li>
                     <li>
-                        <a href="http://blog.getstream.io/cabin-react-redux-example-app-keen/" target="_blank" title="Cabin - Keen.io"><img src="img/keenlogo.svg" width="16" alt="Keen.io" />Step Five &rarr;</a>
+                        <a href="https://getstream.io/blog/cabin-react-redux-example-app-keen/" target="_blank" title="Cabin - Keen.io"><img src="img/keenlogo.svg" width="16" alt="Keen.io" />Step Five &rarr;</a>
                     </li>
                     <li>
-                        <a href="http://blog.getstream.io/cabin-react-redux-example-app-algolia/" target="_blank" title="Cabin - Algolia"><img src="img/algolialogo.svg" width="16" alt='Algolia' />Step Six &rarr;</a>
+                        <a href="https://getstream.io/blog/cabin-react-redux-example-app-algolia/" target="_blank" title="Cabin - Algolia"><img src="img/algolialogo.svg" width="16" alt='Algolia' />Step Six &rarr;</a>
                     </li>
                     <li>
-                        <a href="http://blog.getstream.io/cabin-react-redux-example-app-mapbox/" target="_blank" title="Cabin - Mapbox"><img src="img/mapboxlogo.svg" width="16" alt="Mapbox" />Step Seven &rarr;</a>
+                        <a href="https://getstream.io/blog/cabin-react-redux-example-app-mapbox/" target="_blank" title="Cabin - Mapbox"><img src="img/mapboxlogo.svg" width="16" alt="Mapbox" />Step Seven &rarr;</a>
                     </li>
                     <li>
                         <a href="https://www.digitalocean.com/community/tutorials/how-to-deploy-a-node-js-app-using-terraform-on-ubuntu-14-04" title="DigitalOcean"><img src="img/digitaloceanlogo.svg" width="16" alt="DigitalOcean" />Step Eight &rarr;</a>
                     </li>
                     <li>
-                        <a href="http://blog.getstream.io/react-redux-best-practices-gotchas/" target="_blank" title="React/Redux Best Practices">Bonus &rarr;</a>
+                        <a href="https://getstream.io/blog/react-redux-best-practices-gotchas/" target="_blank" title="React/Redux Best Practices">Bonus &rarr;</a>
                     </li>
                 </ul>
             </nav>
