Switch relative src and href urls to absolute

--- a/www/views/demo.ejs
+++ b/www/views/demo.ejs
@@ -17,10 +17,10 @@
     <meta property="og:type" content="website">
     <meta property="og:image" content="http://cabin.getstream.io/img/og_cabin.jpg" />
 
-    <link rel="stylesheet" href="css/core.css" />
-    <link rel="stylesheet" href="css/animate.css" />
-    <link rel="stylesheet" href="css/style.css" />
-  	<link rel="stylesheet" href="css/demo.css" />
+    <link rel="stylesheet" href="/css/core.css" />
+    <link rel="stylesheet" href="/css/animate.css" />
+    <link rel="stylesheet" href="/css/style.css" />
+  	<link rel="stylesheet" href="/css/demo.css" />
 
     <link href='https://fonts.googleapis.com/css?family=Work+Sans:500,600,400|Anonymous+Pro:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
 
@@ -68,7 +68,7 @@
                 <ul>
                     <li class="logo-nav text-centered">
                         <a href="/" title="Cabin">
-                            <img src="img/Logo.svg" alt="Cabin Logo">
+                            <img src="/img/Logo.svg" alt="Cabin Logo">
                         </a>
                     </li>
                     <li>
@@ -76,28 +76,28 @@
                         <a href="https://getstream.io" class="btn nav-btn" primary target="_blank" title="GetStream.io">Get Stream</a>
                     </li>
                     <li>
-                        <a href="https://getstream.io/blog/cabin-react-redux-example-app-react/" target="_blank" title="Cabin - React"><img src="img/reactlogo.svg" width="18" alt="React" /> Step One &rarr;</a>
+                        <a href="https://getstream.io/blog/cabin-react-redux-example-app-react/" target="_blank" title="Cabin - React"><img src="/img/reactlogo.svg" width="18" alt="React" /> Step One &rarr;</a>
                     </li>
                     <li>
-                        <a href="https://getstream.io/blog/cabin-react-redux-example-app-redux/" target="_blank" title="Cabin - Redux"><img src="img/reduxlogo.svg" width="18" alt="Redux" />Step Two &rarr;</a>
+                        <a href="https://getstream.io/blog/cabin-react-redux-example-app-redux/" target="_blank" title="Cabin - Redux"><img src="/img/reduxlogo.svg" width="18" alt="Redux" />Step Two &rarr;</a>
                     </li>
                     <li>
-                        <a href="https://getstream.io/blog/cabin-react-redux-example-app-stream/" target="_blank" title="Cabin - Stream"><img src="img/streamlogo.svg" width="18" alt="GetStream.io" />Step Three &rarr;</a>
+                        <a href="https://getstream.io/blog/cabin-react-redux-example-app-stream/" target="_blank" title="Cabin - Stream"><img src="/img/streamlogo.svg" width="18" alt="GetStream.io" />Step Three &rarr;</a>
                     </li>
                     <li>
-                        <a href="https://getstream.io/blog/cabin-react-redux-example-app-imgix/" target="_blank" title="Cabin - Imgix"><img src="img/imgix_small_logo.svg" width="16" alt="Imgix" />Step Four &rarr;</a>
+                        <a href="https://getstream.io/blog/cabin-react-redux-example-app-imgix/" target="_blank" title="Cabin - Imgix"><img src="/img/imgix_small_logo.svg" width="16" alt="Imgix" />Step Four &rarr;</a>
                     </li>
                     <li>
-                        <a href="https://getstream.io/blog/cabin-react-redux-example-app-keen/" target="_blank" title="Cabin - Keen.io"><img src="img/keenlogo.svg" width="16" alt="Keen.io" />Step Five &rarr;</a>
+                        <a href="https://getstream.io/blog/cabin-react-redux-example-app-keen/" target="_blank" title="Cabin - Keen.io"><img src="/img/keenlogo.svg" width="16" alt="Keen.io" />Step Five &rarr;</a>
                     </li>
                     <li>
-                        <a href="https://getstream.io/blog/cabin-react-redux-example-app-algolia/" target="_blank" title="Cabin - Algolia"><img src="img/algolialogo.svg" width="16" alt='Algolia' />Step Six &rarr;</a>
+                        <a href="https://getstream.io/blog/cabin-react-redux-example-app-algolia/" target="_blank" title="Cabin - Algolia"><img src="/img/algolialogo.svg" width="16" alt='Algolia' />Step Six &rarr;</a>
                     </li>
                     <li>
-                        <a href="https://getstream.io/blog/cabin-react-redux-example-app-mapbox/" target="_blank" title="Cabin - Mapbox"><img src="img/mapboxlogo.svg" width="16" alt="Mapbox" />Step Seven &rarr;</a>
+                        <a href="https://getstream.io/blog/cabin-react-redux-example-app-mapbox/" target="_blank" title="Cabin - Mapbox"><img src="/img/mapboxlogo.svg" width="16" alt="Mapbox" />Step Seven &rarr;</a>
                     </li>
                     <li>
-                        <a href="https://www.digitalocean.com/community/tutorials/how-to-deploy-a-node-js-app-using-terraform-on-ubuntu-14-04" title="DigitalOcean"><img src="img/digitaloceanlogo.svg" width="16" alt="DigitalOcean" />Step Eight &rarr;</a>
+                        <a href="https://www.digitalocean.com/community/tutorials/how-to-deploy-a-node-js-app-using-terraform-on-ubuntu-14-04" title="DigitalOcean"><img src="/img/digitaloceanlogo.svg" width="16" alt="DigitalOcean" />Step Eight &rarr;</a>
                     </li>
                     <li>
                         <a href="https://getstream.io/blog/react-redux-best-practices-gotchas/" target="_blank" title="React/Redux Best Practices">Bonus &rarr;</a>
@@ -133,13 +133,13 @@
                 <column cols="2" offset="2">
                   <div class="social right">
                     <a href="https://twitter.com/getstream_io" target="_blank" title="Twitter">
-                      <img src="img/twitter.svg" alt="Twitter" />
+                      <img src="/img/twitter.svg" alt="Twitter" />
                     </a>
                     <a href="https://github.com/GetStream" target="_blank" title="GitHub">
-                      <img src="img/github.svg" alt="GitHub" />
+                      <img src="/img/github.svg" alt="GitHub" />
                     </a>
                     <a class="last" href="https://plus.google.com/107168613155747146780" target="_blank" title="Google Plus">
-                      <img src="img/gplus.svg" alt="Google Plus" />
+                      <img src="/img/gplus.svg" alt="Google Plus" />
                     </a>
                   </div>
 
