--- a/www/views/index.ejs
+++ b/www/views/index.ejs
@@ -45,7 +45,7 @@
 
         <row class="header animated fadeInDown">
           <column cols="2" class="logo">
-            <img src="img/Logo.svg" alt="Cabin Logo">
+            <img src="/img/Logo.svg" alt="Cabin Logo">
           </column>
 
           <column cols="10">
@@ -61,7 +61,7 @@
 
       <row class="content">
         <column cols="7">
-          <img src="img/hero-react-redux.svg" width="194" height="71" class=" animated zoomIn" alt="React and Redux"/>
+          <img src="/img/hero-react-redux.svg" width="194" height="71" class=" animated zoomIn" alt="React and Redux"/>
 
           <h6 class=" animated zoomIn">BROUGHT TO YOU BY <a href="//getstream.io" target="_blank" title="GetStream.io">GETSTREAM.IO</a></h6>
 
@@ -98,7 +98,7 @@
           <span class="label text-centered">Maximizing Efficiency</span>
           <h2>Built With These Great Services</h2>
           <p>Cabin is built using React and Redux. Stream powers the feed technology, Algolia search, Mapbox the custom maps, Keen analytics and ImgIX the image resizing. These APIs are powerful and scalable and allow you to build a fully featured app.</p>
-          <img src="img/partners-flare.png" alt="API Partners" />
+          <img src="/img/partners-flare.png" alt="API Partners" />
         </column>
       </row>
       <row centered>
@@ -131,7 +131,7 @@
 
       <row>
         <column cols="4" offset="2" class="text-centered">
-          <img src="img/reactlogo.svg" width="40" height="36" alt="React logo" />
+          <img src="/img/reactlogo.svg" width="40" height="36" alt="React logo" />
           <h3>React</h3>
           <ul>
             <a href="https://getstream.io/blog/cabin-react-redux-example-app-react/" class="btn green" target="_blank" title="Cabin Tutorial - Step 2">Step 2 &rarr;</a>
@@ -142,7 +142,7 @@
         </column>
 
         <column cols="4" class="text-centered">
-          <img src="img/reduxlogo.svg" width="37" height="35" alt="Redux logo" />
+          <img src="/img/reduxlogo.svg" width="37" height="35" alt="Redux logo" />
           <h3>Redux</h3>
           <ul>
             <a href="https://getstream.io/blog/cabin-react-redux-example-app-redux/" class="btn green" target="_blank" title="Cabin Tutorial - Step 3">Step 3 &rarr;</a>
@@ -164,7 +164,7 @@
 
       <row>
         <column cols="4" offset="2" class="text-centered">
-          <img src="img/streamlogo.svg" width="56" height="28" alt="Stream logo" />
+          <img src="/img/streamlogo.svg" width="56" height="28" alt="Stream logo" />
           <h3>Feeds</h3>
           <ul>
             <a href="https://getstream.io/blog/cabin-react-redux-example-app-stream/" class="btn green" target="_blank" title="Cabin Tutorial - Step 4">Step 4 &rarr;</a>
@@ -178,7 +178,7 @@
         </column>
 
         <column cols="4" class="text-centered">
-          <img src="img/imgixlogo.svg" width="91" height="34" alt="Imgix logo" />
+          <img src="/img/imgixlogo.svg" width="91" height="34" alt="Imgix logo" />
           <h3>Image Processing</h3>
           <ul>
             <a href="https://getstream.io/blog/cabin-react-redux-example-app-imgix/" class="btn green" target="_blank" title="Cabin Tutorial - Step 5">Step 5 &rarr;</a>
@@ -193,7 +193,7 @@
       <row>
 
           <column cols="4" offset="2" class="text-centered">
-            <img src="img/keenlogo.svg" width="35" height="30" alt="Keen logo" />
+            <img src="/img/keenlogo.svg" width="35" height="30" alt="Keen logo" />
             <h3>Analytics</h3>
             <ul>
               <a href="https://getstream.io/blog/cabin-react-redux-example-app-keen/" class="btn green" target="_blank" title="Cabin Tutorial - Step 6">Step 6 &rarr;</a>
@@ -205,7 +205,7 @@
           </column>
 
         <column cols="4" class="text-centered">
-          <img src="img/algolialogo.svg" width="33" height="37" alt="Algolia logo" />
+          <img src="/img/algolialogo.svg" width="33" height="37" alt="Algolia logo" />
           <h3>Search</h3>
           <ul>
             <a href="https://getstream.io/blog/cabin-react-redux-example-app-algolia/" class="btn green" target="_blank" title="Cabin Tutorial - Step 7">Step 7 &rarr;</a>
@@ -220,7 +220,7 @@
       </row>
       <row>
         <column cols="4" offset="2" class="text-centered">
-          <img src="img/mapboxlogo.svg" width="86" height="24" alt="Mapbox logo" />
+          <img src="/img/mapboxlogo.svg" width="86" height="24" alt="Mapbox logo" />
           <h3>Maps</h3>
           <ul>
             <a href="https://getstream.io/blog/cabin-react-redux-example-app-mapbox/" class="btn green" target="_blank">Step 8 &rarr;</a>
@@ -231,7 +231,7 @@
           </ul>
         </column>
         <column cols="4" class="text-centered">
-          <img src="img/digitaloceanlogo.svg" width="54" height="30" alt="DigitalOcean logo" />
+          <img src="/img/digitaloceanlogo.svg" width="54" height="30" alt="DigitalOcean logo" />
           <h3>Cloud Server</h3>
           <ul>
             <a href="https://www.digitalocean.com/community/tutorials/how-to-deploy-a-node-js-app-using-terraform-on-ubuntu-14-04" class="btn green" target="_blank">Step 9 &rarr;</a>
@@ -245,7 +245,7 @@
 
       <row centered>
         <column cols="12" class="text-centered">
-          <img src="img/bonus.svg" width="129" height="98" class="bonus-img" alt="Stream Bonus logo"/>
+          <img src="/img/bonus.svg" width="129" height="98" class="bonus-img" alt="Stream Bonus logo"/>
         </column>
       </row>
       <row centered>
@@ -272,7 +272,7 @@
     </section>
 
     <section class="end">
-        <img src="img/end-bg.jpg" alt="Background image" />
+        <img src="/img/end-bg.jpg" alt="Background image" />
       <row centered>
         <a href="https://github.com/GetStream/stream-react-example" class="btn primary" title="GitHub">GITHUB</a>
       </row>
@@ -306,13 +306,13 @@
         <column cols="2" offset="2">
           <div class="social right">
             <a href="https://twitter.com/getstream_io" target="_blank" title="Twitter">
-              <img src="img/twitter.svg" alt="Twitter"/>
+              <img src="/img/twitter.svg" alt="Twitter"/>
             </a>
             <a href="https://github.com/GetStream" target="_blank" title="GitHub">
-              <img src="img/github.svg" alt="GitHub" />
+              <img src="/img/github.svg" alt="GitHub" />
             </a>
             <a class="last" href="https://plus.google.com/107168613155747146780" target="_blank" title="Google Plus">
-              <img src="img/gplus.svg" alt="Google Plus" />
+              <img src="/img/gplus.svg" alt="Google Plus" />
             </a>
           </div>
 
