Update demo page meta tags

--- a/www/views/demo.ejs
+++ b/www/views/demo.ejs
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Cabin: Thoroughly Learn React and Redux with this example app</title>
+    <title>Cabin Demo - Example app built with React and Redux</title>
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <meta name="description" content="This example application created by getstream.io teaches you how to to build an Instagram style application with activity streams and newsfeeds.">
+    <meta name="description" content="This demo, created by getstream.io, shows an Instagram style application with activity streams and newsfeeds.">
     <meta name="keywords" content="redux javascript, redux example app, redux http request, keen.io, algolia search, react js ui, javascript, nodejs, redux with react router, react js pagination, reactjs mobile, react js rest api">
 
     <meta property="og:title" content="Cabin - A React/Redux Tutorial Series by GetStream.io">
     <meta property="og:site_name" content="Cabin - A React/Redux Tutorial Series by GetStream.io">
     <meta property="og:url" content="http://cabin.getstream.io">
-    <meta property="og:description" content="This example application created by getstream.io teaches you how to to build an Instagram style application with activity streams and newsfeeds.">
+    <meta property="og:description" content="This demo, created by getstream.io, shows an Instagram style application with activity streams and newsfeeds.">
     <meta property="fb:app_id" content="1714548178824131">
     <meta property="og:type" content="website">
     <meta property="og:image" content="http://cabin.getstream.io/img/og_cabin.jpg" />
