Added canonical urls

--- a/www/views/demo.ejs
+++ b/www/views/demo.ejs
@@ -5,6 +5,7 @@
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="canonical" href="http://cabin.getstream.io/demo" />
 
     <meta name="description" content="This demo, created by getstream.io, shows an Instagram style application with activity streams and newsfeeds.">
     <meta name="keywords" content="redux javascript, redux example app, redux http request, keen.io, algolia search, react js ui, javascript, nodejs, redux with react router, react js pagination, reactjs mobile, react js rest api">
