--- a/www/views/index.ejs
+++ b/www/views/index.ejs
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
+    <link rel="canonical" href="http://cabin.getstream.io" />
     <meta name="description" content="This example application created by getstream.io teaches you how to to build an Instagram style application with activity streams and newsfeeds.">
     <meta name="keywords" content="react js course, react and redux, react router, redux reducer, react upload, react javascript, redux javascript, react tutorial, redux architecture, react stream, react webpack, redux infinite scroll">
 
