--- a/www/views/demo.ejs
+++ b/www/views/demo.ejs
@@ -26,14 +26,28 @@
     <link href='https://fonts.googleapis.com/css?family=Work+Sans:500,600,400|Anonymous+Pro:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
 
     <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    (function(i, s, o, g, r, a, m) {
+	i['GoogleAnalyticsObject'] = r;
+	(i[r] =
+		i[r] ||
+		function() {
+			(i[r].q = i[r].q || []).push(arguments);
+		}), (i[r].l = 1 * new Date());
+	(a = s.createElement(o)), (m = s.getElementsByTagName(o)[0]);
+	a.async = 1;
+	a.src = g;
+	m.parentNode.insertBefore(a, m);
+})(
+	window,
+	document,
+	'script',
+	'https://www.google-analytics.com/analytics.js',
+	'ga',
+);
 
-        ga('create', 'UA-48587325-5', 'auto');
-        ga('send', 'pageview');
-    </script>
+ga('create', 'UA-48587325-5', 'auto');
+ga('send', 'pageview');
+</script>
 
 </head>
 <body class="demo">
