--- a/www/views/index.ejs
+++ b/www/views/index.ejs
@@ -26,14 +26,28 @@
     <script src="js/cabin.js"></script>
 
     <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    (function(i, s, o, g, r, a, m) {
+	i['GoogleAnalyticsObject'] = r;
+	(i[r] =
+		i[r] ||
+		function() {
+			(i[r].q = i[r].q || []).push(arguments);
+		}), (i[r].l = 1 * new Date());
+	(a = s.createElement(o)), (m = s.getElementsByTagName(o)[0]);
+	a.async = 1;
+	a.src = g;
+	m.parentNode.insertBefore(a, m);
+})(
+	window,
+	document,
+	'script',
+	'https://www.google-analytics.com/analytics.js',
+	'ga',
+);
 
-        ga('create', 'UA-48587325-5', 'auto');
-        ga('send', 'pageview');
-    </script>
+ga('create', 'UA-48587325-5', 'auto');
+ga('send', 'pageview');
+</script>
 
 </head>
 <body>
@@ -301,7 +315,7 @@
       </row>
       <row class="meta">
         <column cols="7">
-          &copy; 2016 Stream.io INC    |    A Techstars NYC Company    |    Proudly Built in Boulder and Amsterdam
+          &copy; 2017 Stream.io INC    |    A Techstars NYC Company    |    Proudly Built in Boulder and Amsterdam
         </column>
         <column cols="2" offset="2">
           <div class="social right">
