--- a/www/views/index.ejs
+++ b/www/views/index.ejs
@@ -340,5 +340,6 @@ ga('send', 'pageview');
 
 
   <script async defer src="https://buttons.github.io/buttons.js"></script>
+  <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/1854208.js"></script>
 </body>
 </html>
